--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,20 @@
-phosh 0.0.2
------------
+pfs 0.0.3
+---------
+March 2025
+* Style fixes
+* Make file-open demo installable (can server as simple file picker)
+* Contributors:
+    * fossdd
+    * Guido Günther
+
+pfs 0.0.2
+----------
 March 2025
 * file chooser: Add search in file open mode
 * file chooser: Indicate loading state
 * Move demo to separate folder
 
-phosh 0.0.1
------------
+pfs 0.0.1
+---------
 December 2024
 * Initial file chooser portal
